--- a/fix-my-db-web/package.json
+++ b/fix-my-db-web/package.json
@@ -12,9 +12,12 @@
     "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.10",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.522.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
