--- a/fix-my-db-web/netlify.toml
+++ b/fix-my-db-web/netlify.toml
@@ -1,6 +1,6 @@
 [build]
     command="npm run build"
-    publish="/fix-my-db-web/dist"
+    publish="dist"
 
 [build.environment]
     NODE_VERSION = "22"
