--- a/fix-my-db-web/netlify.toml
+++ b/fix-my-db-web/netlify.toml
@@ -7,6 +7,6 @@
     NPM_FLAGS = "--no-audit --no-fund"
 
 [[redirects]]
-  from = "/*"
+  from = "/fix-my-db-web/*"
   to = "/fix-my-db-web/index.html"
   status = 200
