--- a/fix-my-db-web/netlify.toml
+++ b/fix-my-db-web/netlify.toml
@@ -1,12 +1,12 @@
 [build]
     command="npm run build"
-    publish="/fix-my-db-web/dist"
+    publish="/dist"
 
 [build.environment]
     NODE_VERSION = "22"
     NPM_FLAGS = "--no-audit --no-fund"
 
 [[redirects]]
-  from = "/fix-my-db-web/*"
-  to = "/fix-my-db-web/index.html"
+  from = "/*"
+  to = "/index.html"
   status = 200
