--- a/fix-my-db-web/package.json
+++ b/fix-my-db-web/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.522.0",
+    "next": "^15.3.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-phone-input-2": "^2.15.1",
