--- a/fix-my-db-web/netlify.toml
+++ b/fix-my-db-web/netlify.toml
@@ -1,6 +1,6 @@
 [build]
     command="npm run build"
-    publish="/dist"
+    publish="dist"
 
 [build.environment]
     NODE_VERSION = "22"
@@ -8,5 +8,5 @@
 
 [[redirects]]
   from = "/*"
-  to = "/index.html"
+  to = "/fix-my-db-web/index.html"
   status = 200
